application-deployment/canary-deployment/canary-deployment-30.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment-30
spec:
  replicas: 5
  selector:
    matchLabels:
      app: canary-30
  template:
    metadata:
      name: app
      labels:
        app: canary-30
    spec:
      containers:
        - name: web
          image: nginx:latest
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: static
