application-deployment/canary-deployment/canary-deployment-70.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: canary-deployment-70
  name: canary-deployment-70
spec:
  replicas: 5
  selector:
    matchLabels:
      app: canary-70
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: canary-70
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: 
            limits: 
                cpu: 250m
                memory: 1Gi
        ports:
            - containerPort: 80
        volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: static-files
      volumes:
          - name: static-files
status: {}
