application-deployment/canary-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
    name: canary-30-svc
spec:
    type: ClusterIP
    selector:
        app: canary-30
    ports:
        - name: http
          port: 80
          targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: canary-70-svc
  name: canary-70-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary-70
  type: ClusterIP
status:
  loadBalancer: {}
