application-deployment/canary-deployment/ingress-canary-30.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: canary-30-ingress
  annotations:
      nginx.ingress.kubernetes.io/canary: "true"
      nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: canary-30-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
